# QtQMLBasicTraining

./: .gitignore
examples/: trace.qzt
examples/10_timer/: CMakeLists.txt  Main.qml  TimerDigitalClock.qml  main.cpp
examples/11_qtObject/: CMakeLists.txt  Main.qml  QtObjectInnerAfter.qml  QtObjectInnerBefore.qml  QtObjectSingleton.qml  QtObjectSingletonConsumer.qml  main.cpp
examples/12_animationMovingBox/: AnimationBehavior.qml  AnimationNone.qml  AnimationSequential.qml  AnimationStandalone.qml  CMakeLists.txt  Main.qml  main.cpp
examples/13_qtQuickControls/: AppWindowHeaderFooter.qml  AppWindowMenu.qml  CMakeLists.txt  Main.qml  UseControls.qml  UseDrawer.qml  UseSwipeView.qml  main.cpp  qtquickcontrols2.conf
examples/14_repeater/: CMakeLists.txt  Main.qml  RepeaterListModel.qml  RepeaterSimple.qml  RepeaterSimpleDelegate.qml  RepeaterStringList.qml  main.cpp
examples/15_listView/: CMakeLists.txt  ListViewBasic.qml  ListViewClickable.qml  ListViewHeaderFooter.qml  ListViewHighlight.qml  Main.qml  main.cpp
examples/15_listView/otherExamples/modelview/delegateModel/: main.qml
examples/15_listView/otherExamples/modelview/gridViewVSTableView/: gridViewVSTableView.pro  main.cpp  main.qml
examples/15_listView/otherExamples/modelview/hierarchicalModel/: hierarchicalModel.pro  main.cpp  main.qml  node.cpp  node.h  readonlymodel.cpp  readonlymodel.h
examples/15_listView/otherExamples/modelview/modelView/: main.qml
examples/15_listView/otherExamples/modelview/objectModel/: main.qml
examples/15_listView/otherExamples/modelview/pathView/: main.qml  qml.qrc
examples/15_listView/otherExamples/modelview/tableView/: main.cpp  model.cpp  model.h  tableView.pro  view.qml
examples/15_listView/otherExamples/modelview/viewNavigation/: main.qml  qml.qrc
examples/15_listView/otherExamples/modelview/xml/: TitleDelegate.qml  main.qml  qml.qrc
examples/15_listView/otherExamples/modelview/xml/files/: items.xml
examples/16_1_accessingQMLObject/: main.cpp  main.qml
examples/16_2_accessingQMLObject/: AccessingQMLObject2.pro  main.cpp  main.qml
examples/16_3_basicQmlCpp/: basicQmlCpp.pro  main.cpp  main.qml
examples/16_4_structuredData/: main.cpp  main.qml  mydataset.cpp  mydataset.h
examples/17_CppQObject/: CMakeLists.txt  Main.qml  Person.cpp  Person.h  main.cpp
examples/18_CppQQuickPaintedItem/: CMakeLists.txt  Main.qml  PieChart.cpp  PieChart.h  main.cpp
examples/19_CppQObjectSingleton/: CMakeLists.txt  Main.qml  PersonVvip.cpp  PersonVvip.h  main.cpp
examples/1_bindingLoop/: CMakeLists.txt  Main.qml  main.cpp
examples/20_CppModelQStringList/: CppModelQStringList.pro  main.cpp  main.qml
examples/21_CppModelDataObject/: CppModelDataObject.pro  DataObject.h  main.cpp  main.qml
examples/22_CppListModel/: CMakeLists.txt  ListViewQmlModel.qml  Main.qml  cppmodel.cpp  cppmodel.h  main.cpp
examples/23_StringTranslation/: CMakeLists.txt  Main.qml  app_fr_FR.ts  app_ko_KR.ts  main.cpp
examples/24_Logging/: AppLogger.cpp  AppLogger.h  CMakeLists.txt  Main.qml  main.cpp
examples/25_QtQuick3D/GrandCherokeeExample/: CMakeLists.txt  GrandCherokeeExample.qmlproject  GrandCherokeeExample.qmlproject.qtds  qmlmodules  translations.db
examples/25_QtQuick3D/GrandCherokeeExample/asset_imports/Quick3DAssets/Grand_cherokee_OptiMat2/: Grand_cherokee_OptiMat2.qml  _importdata.json  qmldir
examples/25_QtQuick3D/GrandCherokeeExample/content/: App.qml  Screen01.ui.qml
examples/25_QtQuick3D/GrandCherokeeExample/imports/: CMakeLists.txt
examples/25_QtQuick3D/GrandCherokeeExample/imports/AndroidViewExample/: CMakeLists.txt  Constants.qml  qmldir
examples/25_QtQuick3D/GrandCherokeeExample/src/: import_qml_plugins.h
examples/25_QtQuick3D/Test3D/: CMakeLists.txt  Test3D.qmlproject  Test3D.qmlproject.qtds  qmlmodules
examples/25_QtQuick3D/Test3D/content/: App.qml  Screen01.ui.qml
examples/25_QtQuick3D/Test3D/imports/: CMakeLists.txt
examples/25_QtQuick3D/Test3D/imports/Test3D/: CMakeLists.txt  Constants.qml  qmldir
examples/25_QtQuick3D/Test3D/src/: import_qml_plugins.h
examples/2_moveMe/: CMakeLists.txt  Main.qml  main.cpp
examples/3_qmlTypes/: CMakeLists.txt  Main.qml  TypeImageFileSystem.qml  TypeImageNetwork.qml  TypeImageProps.qml  TypeImageResource.qml  TypeImageTransform.qml  TypeItemNested.qml  TypeItemSeparated.qml  TypeItemWrapped.qml  TypeMouseArea.qml  TypeMouseAreaDrag.qml  TypeRectangle.qml  TypeText.qml  TypeTextAdv.qml  TypeTextAdv2.qml  main.cpp
examples/4_zOrder/: CMakeLists.txt  Main.qml  main.cpp
examples/5_anchors/: Anchors.qml  AnchorsDynamicSize.qml  AnchorsExButton.qml  AnchorsPartial.qml  CMakeLists.txt  Main.qml  main.cpp
examples/6_positioner/: CMakeLists.txt  Main.qml  PositionerFlow.qml  PositionerGrid.qml  PositionerRowColumn.qml  main.cpp
examples/7_qtQuickLayout/: CMakeLists.txt  Main.qml  QQuickLayoutSideBySide.qml  main.cpp
examples/8_mouseArea/: CMakeLists.txt  Main.qml  TypeMouseArea.qml  TypeMouseArea2.qml  TypeMouseAreaDrag.qml  main.cpp
examples/9_dynamic/createComponent/: main.qml  qml.qrc
examples/9_dynamic/createQmlObject/: main.qml
examples/9_dynamic/deletingObjects/: main.qml  qml.qrc
examples/9_dynamic/loader/: main.qml
examples/Person/: Main.qml  main.cpp  person.cpp  person.h
examples/ex.Person/: CMakeLists.txt  person.h
practice/1_AnchorsDynamicSize/: AnchorSideBySide.qml  CMakeLists.txt  Main.qml  main.cpp
practice/2_FlightAsi/: CMakeLists.txt  FlightAsi.qml  FlightAsiV2.qml  Main.qml  main.cpp
practice/3_PushButton/: CMakeLists.txt  Main.qml  PushButton.qml  PushButtonV2.qml  WindowPushButton.qml  WindowPushButtonV2.qml  WindowPushButtonV3.qml  WindowPushButtonV4.qml  main.cpp
practice/4_CoffeeSelector/: CMakeLists.txt  CoffeeButton.qml  Main.qml  main.cpp
practice/5_AppState/: CMakeLists.txt  Contents.qml  Main.qml  MenuBar.qml  MenuPane.qml  Shadow.qml  main.cpp
practice/6_TextBox/: CMakeLists.txt  Main.qml  main.cpp
practice/6_TextBox/control/: TextBox.qml
practice/6_TextBox/scene/: TextBoxExamples.qml  TextBoxSlidingAnimation.qml
(+34 files in other folders)
